added the payment checkout
